# dazai-renderer

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
resources/shaders/: blur.frag  default.frag  default.geom  default.vert  defaultg.vert  defaultinstanced.vert  framebuffer.frag  framebuffer.vert  light.frag  light.vert  outline.frag  outline.vert  shadowmap.vert  skybox.vert
src/: Ebo.hpp  Shader.cpp  Shader.hpp  Vao.cpp  Vao.hpp  Vbo.cpp  Vbo.hpp  main-backup.cpp  main.cpp
src/core/: Camera.cpp  Camera.hpp  Ebo.cpp  Ebo.hpp  FrameBuffer.cpp  FrameBuffer.hpp  FrameBufferTexture2d.cpp  FrameBufferTexture2d.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  RenderBuffer.cpp  RenderBuffer.hpp  Scene.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.hpp  Texture2d.cpp  Texture2d.hpp  TextureCubemap.cpp  TextureCubemap.hpp  Time.hpp  Transform.hpp  Vao.cpp  Vao.hpp  Vbo.cpp  Vbo.hpp  glad.c
src/scenes/: BloomScene.cpp  BloomScene.hpp  IScene.hpp
src/util/: FileSystem.hpp  GltfLoader.cpp  GltfLoader.hpp  Resources.hpp  Util.hpp
